--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/References/Avivo.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/References/Avivo.tex
@@ -3,5 +3,15 @@
 %% @version $Id: RiskAnalysis.tex 677 2010-02-15 21:20:44Z yegor256@yahoo.com $
 %%
 
-Avivocom Inc. (www.avivocom.com) has been our client for over a year,
-Ritesh Patel.
+\textbf{\href{http://www.avivocom.com}{Avivocom LLC}} (New York City, USA) has been 
+our client for a video conferencing tools:
+``LiveGuide'' and ``LiveBanner'', based on
+Adobe Flash Media Server. The products we have
+successfully developed were utilized in online marketing
+campaigns by IBM (read more on 
+\href{http://www.clickz.com/clickz/news/1691715/ibm-campaign-uses-in-banner-video-chat}{clickz.com}),
+Motorola, Intel, and smaller companies. 
+You may contact 
+\href{http://www.madisonavenuejournal.com/2007/01/01/ritesh_patel/}{Mr. Ritesh Patel}
+Co-founder of the company at
+\href{mailto:riteshpatel@mac.com}{riteshpatel@mac.com}.
