--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/References/Xasax.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/References/Xasax.tex
@@ -3,5 +3,16 @@
 %% @version $Id$
 %%
 
-Xasax Corp, Florida, USA, www.xasax.com, Mr. Simon Tracy.
-Xasax Corp. has been our client for over 4 years.
+\textbf{Xasax Corporation} (Florida, USA)
+had been our client for four years, until the end of 2009
+(read more on \href{http://investing.businessweek.com/research/stocks/private/snapshot.asp?privcapId=40022267}{BusinessWeek}).
+With a 30-people dedicated team of C++, Java, and PHP
+engineers we have been developing a proximity hosting provider, responsible for
+market data and order routing for traders, hedge funds, and financial service providers.
+In 2009 \href{http://www.ise.com}{International Securities Exchange (ISE)} has selected 
+Xasax as its ultra-low-latency solution service provider for 
+cross-connect services at ISE's co-location facility (read more on 
+\href{http://www.ise.com/assets/files/circuits/Circuits_SPRING2009.pdf}{ise.com}).
+Due to the crisis of 2008 the project was postponed by its investors.
+At this moment you may contact their representative Mr. Simon Tracy at
+\href{mailto:smntrc@gmail.com}{smntrc@gmail.com}.
