date in correct format

--- a/_posts/process/risk/2014-08-08-risk.md
+++ b/_posts/process/risk/2014-08-08-risk.md
@@ -18,16 +18,16 @@ keywords:
   - software development risk
   - cause-risk-effect
   - risk identification
-  - "cause risk effect" format
+  - cause risk effect format
   - risk source
   - risk effect
   - risk cause
 next: process/risk/risklist
 ---
 
-A Risk in software development project is an event that may have an impact on the outcome of the 
-project. Risk differs from problems or issues because a risk refers to the future potential of 
-loss/benefit. Problems or issues, however, are conditions or states of affairs that exist in a 
+A Risk in software development project is an event that may have an impact on the outcome of the
+project. Risk differs from problems or issues because a risk refers to the future potential of
+loss/benefit. Problems or issues, however, are conditions or states of affairs that exist in a
 project at present time.
 
 Risks should be identified for the following reasons:
@@ -37,12 +37,12 @@ Risks should be identified for the following reasons:
  * [Specification](/process/scope/specification) is unambiguous when Risks are revealed in advance
  * Outcomes are more predictable if the project team is prepared to handle unexpected negative interruptions
 
-Risks are found and identified by the project team, project manager and you during the whole project 
-lifecycle. Risk management is an iterative process. The sooner a Risk is identified, the faster it 
+Risks are found and identified by the project team, project manager and you during the whole project
+lifecycle. Risk management is an iterative process. The sooner a Risk is identified, the faster it
 can be managed and mitigated.
 
-Major Risk identification activities are performed during the [Inception 
-Phase](/process/time/inception). [Risk Strategies](/process/risk/strategy) and Risk response plans 
+Major Risk identification activities are performed during the [Inception
+Phase](/process/time/inception). [Risk Strategies](/process/risk/strategy) and Risk response plans
 are baselined on a [Risk List](/process/time/lco}">LCO Milestone
 
 <a href="${url:process/risk/risklist)."/>
