--- a/_posts/2014-08-08-about.md
+++ b/_posts/2014-08-08-about.md
@@ -1,7 +1,7 @@
 ---
 layout: article
 date: 2014-08-08
-permalink: /about
+permalink: about
 label: About us
 title: "Software Development General Contracting"
 intro: "Read about our company, strategy, our achievements"
@@ -23,23 +23,23 @@ keywords:
 next: process/cost
 ---
 
-TechnoPark Corp. is a software development with an innovative approach to project management in 
-[distributed software development teams](/about/teams). Like nowhere else, when you hire us as a 
-general contractor you stay actively involved in every last detail of a project internal affairs. 
-You control your business success by means of our automated instant metrics, compliant with 
-[PMBOK](http://en.wikipedia.org/wiki/Project\_Management\_Body\_of\_Knowledge), 
-[CMMI](http://www.sei.cmu.edu/cmmi/general/), 
+TechnoPark Corp. is a software development with an innovative approach to project management in
+[distributed software development teams](/about/teams). Like nowhere else, when you hire us as a
+general contractor you stay actively involved in every last detail of a project internal affairs.
+You control your business success by means of our automated instant metrics, compliant with
+[PMBOK](http://en.wikipedia.org/wiki/Project\_Management\_Body\_of\_Knowledge),
+[CMMI](http://www.sei.cmu.edu/cmmi/general/),
 [RUP](http://en.wikipedia.org/wiki/IBM\_Rational\_Unified\_Process) and [ISO 9001](http://en.wikipedia.org/wiki/ISO\_9001).
 
-We work only with fixed-price projects, where [Scope](/process/scope), [Cost](/process/cost) and 
-[Schedule](/process/time) are always baselined. You do not pay salaries or any other indirect costs, 
+We work only with fixed-price projects, where [Scope](/process/scope), [Cost](/process/cost) and
+[Schedule](/process/time) are always baselined. You do not pay salaries or any other indirect costs,
 only a fixed price of [Deliverables](/process/warranty/deliverables).
 
-A project is organized as a [distributed team](/about/teams) of narrow-skilled engineers when you 
-can pick-up the best suitable talents through just one contractor. There are 70+ professional 
+A project is organized as a [distributed team](/about/teams) of narrow-skilled engineers when you
+can pick-up the best suitable talents through just one contractor. There are 70+ professional
 software groups and individuals in our database who can be involved in your project.
 
-You provide functional and non-functional requirements. We gather a project team and equip it with 
-our proprietary online project management system. Technicians provide programming, testing, design 
-and analysis services. Our project manager integrates all these efforts together in order to deliver 
+You provide functional and non-functional requirements. We gather a project team and equip it with
+our proprietary online project management system. Technicians provide programming, testing, design
+and analysis services. Our project manager integrates all these efforts together in order to deliver
 a product to your end-users.
