--- a/_posts/2014-08-08-contacts.md
+++ b/_posts/2014-08-08-contacts.md
@@ -1,7 +1,7 @@
 ---
 layout: article
 date: 2014-08-08
-permalink: /contacts
+permalink: contacts
 label: Contacts
 title: "Contact Us Today"
 intro: "Contact us now instead of later"
