--- a/_posts/2014-08-08-ru.md
+++ b/_posts/2014-08-08-ru.md
@@ -1,7 +1,7 @@
 ---
 layout: article
 date: 2014-08-08
-permalink: /ru
+permalink: ru
 label: По русски
 title: "Уникальный процесс разработки ПО в распределенных командах"
 intro: "Узнайте больше о нашем изобретении"
@@ -24,12 +24,12 @@ keywords:
 next: process/scope
 ---
 
-Зачастую, удачный выбор разработчика программного продукта не является гарантией успеха в конкретном 
-проекте. Даже если разработчик качественно управляет своими процессами Вы, как клиент, хотите быть 
-детально информированы и ходе работ. Очень часто участие закачика в работе проекта является важным 
-фактором успеха всего предприятия. Наша разработка позволяет Вам получать качественный результат, 
+Зачастую, удачный выбор разработчика программного продукта не является гарантией успеха в конкретном
+проекте. Даже если разработчик качественно управляет своими процессами Вы, как клиент, хотите быть
+детально информированы и ходе работ. Очень часто участие закачика в работе проекта является важным
+фактором успеха всего предприятия. Наша разработка позволяет Вам получать качественный результат,
 будучи активным участником всего процесса.
 
 
-Как сказано в презентации, мы активно ищем клиентов для выполнения пилотных проектов, с применением 
+Как сказано в презентации, мы активно ищем клиентов для выполнения пилотных проектов, с применением
 нашей разработки.
