--- a/_posts/2014-08-08-stories.md
+++ b/_posts/2014-08-08-stories.md
@@ -1,7 +1,7 @@
 ---
 layout: article
 date: 2014-08-08
-permalink: /stories
+permalink: stories
 label: Stories
 title: "Success Stories"
 description: no description
@@ -9,6 +9,6 @@ keywords:
   - software development
 ---
 
-Select a category from the lists below and read relevant Success Stories. Click on one of the tags 
-below. This list is updated regularly as we complete new projects. Some of the Stories you see here 
+Select a category from the lists below and read relevant Success Stories. Click on one of the tags
+below. This list is updated regularly as we complete new projects. Some of the Stories you see here
 are the re-worked Lessons Learned we collect by the end of each project Iteration.
