--- a/_posts/2014-08-08-process.md
+++ b/_posts/2014-08-08-process.md
@@ -1,7 +1,7 @@
 ---
 layout: article
 date: 2014-08-08
-permalink: /process
+permalink: process
 label: Process
 term: specification
 title: "Iterative And Incremental Software Development Process"
@@ -23,27 +23,27 @@ keywords:
 next: process/scope
 ---
 
-We implement full-scale PMBOK-inspired project management and make its every last detail valuable 
-and easy-to-understand by means of instant automated metrics. Complex project management principles, 
+We implement full-scale PMBOK-inspired project management and make its every last detail valuable
+and easy-to-understand by means of instant automated metrics. Complex project management principles,
 documents, processes and rules are transparent for you with our project management web panel.
 
-Our software development lifecycle is iterative and incremental. We deliver software product by 
-independent builds at the end of each [Iteration](/process/time/iteration). You approve 
-[Schedule](/process/time/schedule) at the [LCO milestone](/process/time/lco) in the first weeks of a 
+Our software development lifecycle is iterative and incremental. We deliver software product by
+independent builds at the end of each [Iteration](/process/time/iteration). You approve
+[Schedule](/process/time/schedule) at the [LCO milestone](/process/time/lco) in the first weeks of a
 project, and then track it by [Earned Value](/process/time/spi) data.
 
-The diagram shows how your informal request is transferred to Deliverables, which you accept at the 
+The diagram shows how your informal request is transferred to Deliverables, which you accept at the
 end of the project:
 of
 
-Project [communications](/process/communication) are iterative and customer-focused. They include 
-[Daily Reports](/process/communication/dailyreport), [incremental 
-delivery](/process/communication/incremental) of software product, regular [acceptance 
+Project [communications](/process/communication) are iterative and customer-focused. They include
+[Daily Reports](/process/communication/dailyreport), [incremental
+delivery](/process/communication/incremental) of software product, regular [acceptance
 meetings](/process/communication/iam) with project status reporting and monitoring.
 
-We proactively protect [intellectual property rights](/process/ipr) of software by means of 
-[Non-Disclosure Agreements](/process/ipr/nda) and [information security](/process/ipr/security) 
+We proactively protect [intellectual property rights](/process/ipr) of software by means of
+[Non-Disclosure Agreements](/process/ipr/nda) and [information security](/process/ipr/security)
 internal policies and rules.
 
-When a project is closed, we continue to provide warranty [defect 
+When a project is closed, we continue to provide warranty [defect
 removal](/process/warranty/defectremoval) services for [Deliverables](/process/warranty/deliverables).
